--- a/Task_01_EDA.ipynb
+++ b/Task_01_EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "03c3670b",
+   "id": "67ade2dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd78b6e",
+   "id": "a22420a3",
    "metadata": {},
    "source": [
-    "# LOADING THE DATASET and PRE-PROCESSING"
+    "# LOADING THE DATASET "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "46e30f63",
+   "id": "7fe01d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e037d84e",
+   "id": "6d6389a7",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42176857",
+   "id": "21b7f7f0",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "32627a61",
+   "id": "f2fa2538",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "962ae85f",
+   "id": "f483d338",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e38e8be3",
+   "id": "7a1bcfbb",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7bd86712",
+   "id": "689b4076",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e6b2eb21",
+   "id": "a64e9e81",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c218058f",
+   "id": "237d6aaf",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca21c7e1",
+   "id": "60beaec8",
    "metadata": {},
    "source": [
     "# Provider Demographics and Behavior\n"
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a4be89",
+   "id": "e7c3e77a",
    "metadata": {},
    "source": [
     "# Provider Type Distribution "
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b81604bc",
+   "id": "9ecd665b",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "73148694",
+   "id": "acebdb5d",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b68ea7b0",
+   "id": "17748ff8",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782977a3",
+   "id": "82200658",
    "metadata": {},
    "source": [
     "# Gender Analysis"
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f004d1fa",
+   "id": "e8d9cb80",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2d5b625c",
+   "id": "db448294",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957e5c2a",
+   "id": "ad540da3",
    "metadata": {},
    "source": [
     "# Geographic Insights"
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "815e89f6",
+   "id": "f15403d3",
    "metadata": {},
    "source": [
     "# State-wise Distribution"
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c3f1e3b5",
+   "id": "4129e55c",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768cdcab",
+   "id": "4eda2e4f",
    "metadata": {},
    "outputs": [],
    "source": [
