--- a/Data exploration.ipynb
+++ b/Data exploration.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f2d95256-a763-41de-afc4-096cc97a46a2",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,8 +1502,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e64dc04-dd3f-4986-92f6-ec31444ba8bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing valuse\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing_Values</th>\n",
+       "      <th>Percentages</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>National Provider Identifier</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Last Name/Organization Name of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>First Name of the Provider</th>\n",
+       "      <td>4255</td>\n",
+       "      <td>4.255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Middle Initial of the Provider</th>\n",
+       "      <td>29331</td>\n",
+       "      <td>29.331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Credentials of the Provider</th>\n",
+       "      <td>7209</td>\n",
+       "      <td>7.209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender of the Provider</th>\n",
+       "      <td>4254</td>\n",
+       "      <td>4.254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Entity Type of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Street Address 1 of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Street Address 2 of the Provider</th>\n",
+       "      <td>59363</td>\n",
+       "      <td>59.363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zip Code of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State Code of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country Code of the Provider</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Provider Type</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medicare Participation Indicator</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Place of Service</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HCPCS Code</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HCPCS Description</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HCPCS Drug Indicator</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Number of Services</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Number of Medicare Beneficiaries</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Number of Distinct Medicare Beneficiary/Per Day Services</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Average Medicare Allowed Amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Average Submitted Charge Amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Average Medicare Payment Amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Average Medicare Standardized Amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    Missing_Values  \\\n",
+       "index                                                            0   \n",
+       "National Provider Identifier                                     0   \n",
+       "Last Name/Organization Name of the Provider                      0   \n",
+       "First Name of the Provider                                    4255   \n",
+       "Middle Initial of the Provider                               29331   \n",
+       "Credentials of the Provider                                   7209   \n",
+       "Gender of the Provider                                        4254   \n",
+       "Entity Type of the Provider                                      0   \n",
+       "Street Address 1 of the Provider                                 0   \n",
+       "Street Address 2 of the Provider                             59363   \n",
+       "City of the Provider                                             0   \n",
+       "Zip Code of the Provider                                         0   \n",
+       "State Code of the Provider                                       0   \n",
+       "Country Code of the Provider                                     0   \n",
+       "Provider Type                                                    0   \n",
+       "Medicare Participation Indicator                                 0   \n",
+       "Place of Service                                                 0   \n",
+       "HCPCS Code                                                       0   \n",
+       "HCPCS Description                                                0   \n",
+       "HCPCS Drug Indicator                                             0   \n",
+       "Number of Services                                               0   \n",
+       "Number of Medicare Beneficiaries                                 0   \n",
+       "Number of Distinct Medicare Beneficiary/Per Day...               0   \n",
+       "Average Medicare Allowed Amount                                  0   \n",
+       "Average Submitted Charge Amount                                  0   \n",
+       "Average Medicare Payment Amount                                  0   \n",
+       "Average Medicare Standardized Amount                             0   \n",
+       "\n",
+       "                                                    Percentages  \n",
+       "index                                                     0.000  \n",
+       "National Provider Identifier                              0.000  \n",
+       "Last Name/Organization Name of the Provider               0.000  \n",
+       "First Name of the Provider                                4.255  \n",
+       "Middle Initial of the Provider                           29.331  \n",
+       "Credentials of the Provider                               7.209  \n",
+       "Gender of the Provider                                    4.254  \n",
+       "Entity Type of the Provider                               0.000  \n",
+       "Street Address 1 of the Provider                          0.000  \n",
+       "Street Address 2 of the Provider                         59.363  \n",
+       "City of the Provider                                      0.000  \n",
+       "Zip Code of the Provider                                  0.000  \n",
+       "State Code of the Provider                                0.000  \n",
+       "Country Code of the Provider                              0.000  \n",
+       "Provider Type                                             0.000  \n",
+       "Medicare Participation Indicator                          0.000  \n",
+       "Place of Service                                          0.000  \n",
+       "HCPCS Code                                                0.000  \n",
+       "HCPCS Description                                         0.000  \n",
+       "HCPCS Drug Indicator                                      0.000  \n",
+       "Number of Services                                        0.000  \n",
+       "Number of Medicare Beneficiaries                          0.000  \n",
+       "Number of Distinct Medicare Beneficiary/Per Day...        0.000  \n",
+       "Average Medicare Allowed Amount                           0.000  \n",
+       "Average Submitted Charge Amount                           0.000  \n",
+       "Average Medicare Payment Amount                           0.000  \n",
+       "Average Medicare Standardized Amount                      0.000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Missing valuse\")\n",
+    "missing_values=df.isnull().sum()\n",
+    "# print(missing_values)\n",
+    "percentages=(missing_values/len(df))*100\n",
+    "dataOfMissingValues=pd.DataFrame({'Missing_Values':missing_values,\"Percentages\":percentages})\n",
+    "dataOfMissingValues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4e42169",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29346, 27)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=df.dropna()\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bfd407a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 27)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25b4b9b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70654\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08dad89b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1511,7 +1822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1525,7 +1836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
